# glome

./: CMakeLists.txt  README.md  StackLib.sln
StackLib/: AssemblyInfo.cpp  ReadMe.txt  StackAssembler.cpp  StackConsole.cpp  StackConsole.vcproj  StackLib.cpp  StackLib.h  StackLib.vcproj  Stdafx.cpp  config.h  defs.h  stack_wrap_aes.cpp  stack_wrap_crypto.cpp  stack_wrap_des.cpp
StackLib/Stack/: StackUnmanaged.cpp  asm_streamer.c  asm_streamer.h  getopt.h  il1_optimizer.c  il1_optimizer.h  il2_optimizer.c  il2_optimizer.h  il_streamer.c  il_streamer.h  lex.yy.c  lex_proto.c  lex_proto.h  pkg_encoder.c  pkg_encoder.h  pkg_linker.c  pkg_linker.h  scr_generator.c  scr_generator.h  sem_proto.c  sem_proto.h  stack.lex  stack.y  stack_tab.c  stack_tab.h  stack_wrap_l1_optimizer.cpp  stack_wrap_l2_optimizer.cpp  stack_wrap_lexer.cpp  stack_wrap_packager.cpp  stack_wrap_parser.cpp  stack_wrap_streamer.cpp  stack_wrap_table.cpp  sym_table.c  sym_table.h  token.h  unistd.h
StackLib/StackVM/: midgard.c  midgard.h  stack_wrap_midgard.cpp  stack_wrap_vm.cpp  vm_framework.c  vm_framework.h  vm_interpreter.c  vm_stack.c  vm_stack.h
StackLib/crypto/inc/: cr_apis.h
StackLib/crypto/src/: cr_aes.c  cr_core.c  cr_crc.c  cr_crc.h  cr_crypt.c  cr_des.c  cr_des.h  cr_mac.c
